2009-01-06  Daniel Elstner  <danielk@openismus.com>

	* Makefile.am (cluttermm_docdir): Rename from clutter_docdir and
	change the path to point to the cluttermm-0.9 documentation instead
	of the clutter one.

2009-01-06  Daniel Elstner  <danielk@openismus.com>

	* docs/tutorial/cluttermm-tut.xml: Rework the Clutter tutorial for
	the Cluttermm API.

2009-01-06  Daniel Elstner  <danielk@openismus.com>

	* Makefile.am (bin_PROGRAMS): Rename to noinst_PROGRAMS, or every
	example executable will be installed as $(bindir)/example -- the
	last one wins.  Do we want to install the example binaries, and if
	so, where?
	({,un}install-tutorial): Depend on docs/tutorial/html/index.html
	rather than the phony target html, because the rule derives the
	location of the html build directory from the first dependency.

2009-01-06  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Correct the upload URL.

2009-01-06  Daniel Elstner  <danielk@openismus.com>

	* docs/index.html: Copy file from Clutter tutorial.
	* docs/tutorial/README: ditto,
	* docs/tutorial/cluttermm-tut.xml: ditto,
	* docs/tutorial/docbook_phpwebnotes.xsl: ditto,
	* docs/tutorial/insert_example_code.pl: ditto,
	* docs/tutorial/style.css: ditto.
	* Makefile.am: Integrate the documentation build infrastructure
	from the Clutter tutorial into the non-recursive build system.

2008-12-31  Daniel Elstner  <danielk@openismus.com>

	* examples/multiline_text_entry/{multiline_entry.{cc,h},main.cc}:
	New example implementing a multi-line text entry actor.  Converted
	from the C Clutter tutorial example of the same name.
	* Makefile.am (bin_PROGRAMS): Add
	examples/multiline_text_entry/example.

2008-12-30  Daniel Elstner  <danielk@openismus.com>

	* examples/scrolling/{scrollingcontainer.{cc,h},main.cc}: New
	example demonstrating a custom container which scrolls its content.
	Converted from the C Clutter tutorial example of the same name.
	* Makefile.am (bin_PROGRAMS): Add examples/scrolling/example.